src/test/deca/syntax/invalid/op_error.deca
//Description
//    Vérifier les opérations
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 9

{
x = y + 1 = y + 4;
}
